# jmpf-open-standard

./: CAPABILITIES.md  CLEANUP.md  CREATOR_GUIDE.md  LICENSE  PHILOSOPHY.md  README.md  creator.py  demo.py  extra  extra2  fullcrandtmstampJarvis_Engine_Framework.txt  pyproject.toml  test_refactor.py
.github/agents/: jl_engine_operator.agent.md  sparkbyte_jl_engine_operator.agent.md  sparkbyte_v6_as_agent.md
examples/: jl_engine_operator.mpf.json  neutral_assistant.mpf.json  sparkbyte-v6.mpf.json  sparkbyte.mpf.json
python/jl_mpf_spec/: __init__.py  cli.py  executor.py  loader.py  schema_version.py  types.py  validator.py
python/jl_mpf_spec/schema/: mpf-jl-extensions-v5.json  mpf-v5.json
schema/: mpf-jl-extensions-v1.json
