[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jl-mpf-spec"
version = "0.1.0"
description = "Modular Personality Format (MPF) v5 — portable, model-agnostic agent personality schema with tier-based context compression."
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["jsonschema>=4.0.0"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
mpf = "jl_mpf_spec.cli:main"

[tool.setuptools.package-data]
jl_mpf_spec = ["schema/*.json"]
